2003-10-18  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b174

	* Added a missing space in the ImageMagick execution code that
	  would cause a weird error and status code.  This was introduced
	  in -b173.

2003-10-18  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b173

	* Fixed the "Rasputin Bug".  The +profile '*' issue should now be
	  resolved.

2003-10-17 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b172

	* Fixed (hopefully) the white space in frame bug.  Image size 
	  parameters were not being rounded, so could be fractional.

	* Centered "add comment".

	* Added test to stop breadcrumb looping indefinitely in case of 
	  "inter-nested" albums.  Use hidden config option 
	  gallery->app->maximumAlbumDepth to allow people with deeply 
	  nested albums to still display all parent albums.

2003-10-18 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b171

	* Language: - Update german (de_DE). 
		    - Added Changelog to every Language	
		    - Synced languages against latest changes

2003-10-17 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b170

	* Roll back to b168.  

2003-10-17 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b169

	* (Edited) Fix for non-existent bug.

2003-10-17 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b168

	* Put in frame work for translating email into recipients language.

	* Included URLs in update emails, where possible.

	* Email can be sent to admin after any change in any album 
	  (hidden config vars).

2003-10-17  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b167

	* Fixed some errors in move_album.php and move_photo.php.

2003-10-17 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b166

	* User name and IP added to change emails.

2003-10-17  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b165

	* Removed several warnings, notices, typos.

2003-10-16  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b164

	* Fixed a typo in delete_photo.php
