@@ -18,7 +18,7 @@
 includeHtmlWrap("wrapper.header");
 ?>
 
-<table width="100%" border=0>
+<table width="100%" border="0">
   <tr>
     <td>
       <table cellpadding="0" cellspacing="0" width="100%" border="0" align="center" class="mod_headliner">
