@@ -17,10 +17,6 @@
 // $Id$
 ?>
 
-    </td>
-  </tr>
-  <tr>
-    <td>
       <table width="100%" cellspacing="0" cellpadding="0" class="modfooter">
         <tr>
           <td valign=top>
