@@ -1,0 +1,4 @@
+<?php /* $Id$ */ ?>
+<table border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td class="navtableborderbegin">
