@@ -109,7 +109,6 @@ A:hover	{ color: #202020; }
 	  padding:2px;
 	  margin-top:2px;		
 	  border:0px dashed #404040;
-	  width=100%  
 	}
 .error  /* all error text */
 	{ 
