@@ -106,7 +106,6 @@ A:hover	{ color: #E91414; }
 	  padding:2px;
 	  margin-top:2px;		
 	  border:0px dashed #000000;
-	  width=100%  
 	}
 .error  /* all error text */
 	{ 
