@@ -113,7 +113,6 @@ A:hover	{ color: #C0C0C0; }
 	  padding:2px;
 	  margin-top:2px;		
 	  border:0px dashed #404040;
-	  width=100%  
 	}
 .error  /* all error text */
 	{ 
